--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,21 @@ uuid = "1b0ae80d-f1e4-4f58-9d78-ebd6237fabae"
 authors = ["Matthew Priddin and contributors"]
 version = "0.1.0"
 
+[deps]
+ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
+HolomorphicFun = "856dd008-ac59-4279-b7ad-7b5f1a10bcbb"
+Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+PolynomialRoots = "3a141323-8675-5d76-9d11-e1df1406c778"
+RiemannHilbert = "79305c5b-9889-52e9-bdbd-56f883c71fe0"
+ScaledLines = "477db0d3-c149-468e-ab7b-d482e46444c0"
+SingularIntegralEquations = "e094c991-5a90-5477-8896-c1e4c9552a1a"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
+WienerHopf = "ac0c8dbe-b04b-11e9-2708-77ad36e1f2f5"
+
 [compat]
 julia = "1.8"
 
