--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
+DomainSets = "5b8099bc-c8ec-5219-889f-1d9e522a28bf"
 HolomorphicFun = "856dd008-ac59-4279-b7ad-7b5f1a10bcbb"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
@@ -14,12 +15,15 @@ ScaledLines = "477db0d3-c149-468e-ab7b-d482e46444c0"
 SingularIntegralEquations = "e094c991-5a90-5477-8896-c1e4c9552a1a"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StaticUnivariatePolynomials = "6f584044-cad5-5b68-a429-1e244a824f76"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 WienerHopf = "ac0c8dbe-b04b-11e9-2708-77ad36e1f2f5"
 
 [compat]
-julia = "1.8"
+ApproxFun = "0.13.5"
+DomainSets = "0.5.11"
+julia = "1.7, 1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
