Get tests passing

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ HolomorphicFun = "856dd008-ac59-4279-b7ad-7b5f1a10bcbb"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 PolynomialRoots = "3a141323-8675-5d76-9d11-e1df1406c778"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 RiemannHilbert = "79305c5b-9889-52e9-bdbd-56f883c71fe0"
 ScaledLines = "477db0d3-c149-468e-ab7b-d482e46444c0"
 SingularIntegralEquations = "e094c991-5a90-5477-8896-c1e4c9552a1a"
