CompatHelper: add new compat entry for PolynomialRoots at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ WienerHopf = "ac0c8dbe-b04b-11e9-2708-77ad36e1f2f5"
 [compat]
 ApproxFun = "0.13.5"
 DomainSets = "0.5.11"
+PolynomialRoots = "1"
 julia = "1.7, 1.8"
 
 [extras]
